tests/negative/test_cast_raw_raw_cn_asgn.orb
fnc main () () {
    eval (sym (a ()));
    eval (sym (b (cast (raw cn) a)));
    = b ();
};